[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "powerapps-solution-exporter"
version = "1.0.0"
description = "A CLI tool to download and export unmanaged PowerApps solutions from Dynamics 365 / Power Platform"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Christopher Man", email = "CMAN@acas.org.uk"}
]
keywords = [
    "powerapps",
    "dynamics365",
    "power-platform",
    "dataverse",
    "solution-export",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/christophergyman/powerapps-solution-exporter"
Documentation = "https://github.com/christophergyman/powerapps-solution-exporter#readme"
Repository = "https://github.com/christophergyman/powerapps-solution-exporter.git"
Issues = "https://github.com/christophergyman/powerapps-solution-exporter/issues"

[project.scripts]
solution-exporter = "solution_exporter:main"

[tool.setuptools]
py-modules = ["solution_exporter"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

